Add more information and location dropdown to main page

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,36 +1,183 @@
-<header>Riptide</header>
+<header>
+  <nav class="navbar navbar-expand-lg">
+    <h1>Riptide</h1>
 
-<body>
-  <header id='location-container'>
-    <h1 id="location-name">Location Name</h1>
-    <h2 id="subregion-name">Subregion Name</h2>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+      <div class="dropdown show">
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Locations
+        </a>
+
+        <div class="dropdown-menu">
+          <form class="px-4 py-3">
+
+            <div class="form-group">
+              <label for="search-input">Search Locations</label>
+              <input type="text" class="form-control" id="search-input" placeholder="Location Name">
+            </div>
+          </form>
+
+          <div class="dropdown-divider"></div>
+          <div id="location-list">
+            <h6 class="dropdown-header">Subregion 1</h6>
+            <a class="dropdown-item" href="#">Location 1 </a>
+            <a class="dropdown-item" href="#">Location 2 </a>
+            <a class="dropdown-item" href="#">Location 3 </a>
+            <a class="dropdown-item" href="#">Location 4 </a>
+            <a class="dropdown-item" href="#">Location 5 </a>
+            <a class="dropdown-item" href="#">Location 6 </a>
+            <a class="dropdown-item" href="#">Location 7 </a>
+            <a class="dropdown-item" href="#">Location 8 </a>
+            <h6 class="dropdown-header">Subregion 2</h6>
+            <a class="dropdown-item" href="#">Location 9 </a>
+            <a class="dropdown-item" href="#">Location 10 </a>
+            <a class="dropdown-item" href="#">Location 11 </a>
+            <a class="dropdown-item" href="#">Location 12 </a>
+            <a class="dropdown-item" href="#">Location 13 </a>
+            <a class="dropdown-item" href="#">Location 14 </a>
+            <a class="dropdown-item" href="#">Location 15 </a>
+            <a class="dropdown-item" href="#">Location 16 </a>
+            <a class="dropdown-item" href="#">Location 17 </a>
+            <a class="dropdown-item" href="#">Location 18 </a>
+            <a class="dropdown-item" href="#">Location 19 </a>
+            <a class="dropdown-item" href="#">Location 20 </a>
+            <a class="dropdown-item" href="#">Location 21 </a>
+            <a class="dropdown-item" href="#">Location 22 </a>
+            <a class="dropdown-item" href="#">Location 23 </a>
+            <a class="dropdown-item" href="#">Location 24 </a>
+            <a class="dropdown-item" href="#">Location 25 </a>
+            <a class="dropdown-item" href="#">Location 26 </a>
+            <a class="dropdown-item" href="#">Location 27 </a>
+            <a class="dropdown-item" href="#">Location 28 </a>
+            <a class="dropdown-item" href="#">Location 29 </a>
+            <a class="dropdown-item" href="#">Location 30 </a>
+            <h6 class="dropdown-header">Subregion 3</h6>
+            <a class="dropdown-item" href="#">Location 31 </a>
+            <a class="dropdown-item" href="#">Location 32 </a>
+            <a class="dropdown-item" href="#">Location 33 </a>
+            <a class="dropdown-item" href="#">Location 34 </a>
+            <a class="dropdown-item" href="#">Location 35 </a>
+            <a class="dropdown-item" href="#">Location 36 </a>
+            <a class="dropdown-item" href="#">Location 37 </a>
+            <a class="dropdown-item" href="#">Location 38 </a>
+            <a class="dropdown-item" href="#">Location 39 </a>
+            <a class="dropdown-item" href="#">Location 40 </a>
+            <a class="dropdown-item" href="#">Location 41 </a>
+            <a class="dropdown-item" href="#">Location 42 </a>
+            <a class="dropdown-item" href="#">Location 43 </a>
+            <a class="dropdown-item" href="#">Location 44 </a>
+            <a class="dropdown-item" href="#">Location 45 </a>
+            <a class="dropdown-item" href="#">Location 46 </a>
+            <a class="dropdown-item" href="#">Location 47 </a>
+            <a class="dropdown-item" href="#">Location 48 </a>
+            <a class="dropdown-item" href="#">Location 49 </a>
+            <a class="dropdown-item" href="#">Location 50 </a>
+            <a class="dropdown-item" href="#">Location 51 </a>
+            <a class="dropdown-item" href="#">Location 52 </a>
+            <a class="dropdown-item" href="#">Location 53 </a>
+            <a class="dropdown-item" href="#">Location 54 </a>
+            <a class="dropdown-item" href="#">Location 55 </a>
+            <a class="dropdown-item" href="#">Location 56 </a>
+            <a class="dropdown-item" href="#">Location 57 </a>
+            <a class="dropdown-item" href="#">Location 58 </a>
+            <a class="dropdown-item" href="#">Location 59 </a>
+            <a class="dropdown-item" href="#">Location 60 </a>
+            <a class="dropdown-item" href="#">Location 61 </a>
+            <a class="dropdown-item" href="#">Location 62 </a>
+            <a class="dropdown-item" href="#">Location 63 </a>
+            <a class="dropdown-item" href="#">Location 64 </a>
+            <a class="dropdown-item" href="#">Location 65 </a>
+            <a class="dropdown-item" href="#">Location 66 </a>
+            <a class="dropdown-item" href="#">Location 67 </a>
+            <a class="dropdown-item" href="#">Location 68 </a>
+            <a class="dropdown-item" href="#">Location 69 </a>
+            <a class="dropdown-item" href="#">Location 70 </a>
+            <a class="dropdown-item" href="#">Location 71 </a>
+            <a class="dropdown-item" href="#">Location 72 </a>
+            <a class="dropdown-item" href="#">Location 73 </a>
+            <a class="dropdown-item" href="#">Location 74 </a>
+            <a class="dropdown-item" href="#">Location 75 </a>
+            <a class="dropdown-item" href="#">Location 76 </a>
+            <a class="dropdown-item" href="#">Location 77 </a>
+            <a class="dropdown-item" href="#">Location 78 </a>
+            <a class="dropdown-item" href="#">Location 79 </a>
+            <a class="dropdown-item" href="#">Location 80 </a>
+            <a class="dropdown-item" href="#">Location 81 </a>
+            <a class="dropdown-item" href="#">Location 82 </a>
+            <a class="dropdown-item" href="#">Location 83 </a>
+            <a class="dropdown-item" href="#">Location 84 </a>
+            <a class="dropdown-item" href="#">Location 85 </a>
+            <a class="dropdown-item" href="#">Location 86 </a>
+            <a class="dropdown-item" href="#">Location 87 </a>
+            <a class="dropdown-item" href="#">Location 88 </a>
+            <a class="dropdown-item" href="#">Location 89 </a>
+            <a class="dropdown-item" href="#">Location 90 </a>
+            <a class="dropdown-item" href="#">Location 91 </a>
+            <a class="dropdown-item" href="#">Location 92 </a>
+            <a class="dropdown-item" href="#">Location 93 </a>
+            <a class="dropdown-item" href="#">Location 94 </a>
+            <a class="dropdown-item" href="#">Location 95 </a>
+            <a class="dropdown-item" href="#">Location 96 </a>
+            <a class="dropdown-item" href="#">Location 97 </a>
+            <a class="dropdown-item" href="#">Location 98 </a>
+            <a class="dropdown-item" href="#">Location 99 </a>
+            <a class="dropdown-item" href="#">Location 100 </a>
+            <a class="dropdown-item" href="#">Location 101 </a>
+            <a class="dropdown-item" href="#">Location 102 </a>
+            <a class="dropdown-item" href="#">Location 103 </a>
+            <a class="dropdown-item" href="#">Location 104 </a>
+            <a class="dropdown-item" href="#">Location 105 </a>
+            <a class="dropdown-item" href="#">Location 106 </a>
+            <a class="dropdown-item" href="#">Location 107 </a>
+            <a class="dropdown-item" href="#">Location 108 </a>
+        </div>
+        <!-- <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" id="location-search-input" type="search" placeholder="Search for a Location" aria-label="Search" onkeyup="locationSearch()">
+      </form> -->
+    </div>
+    <div id="location-container">
+      <h1 id="location-name">Location Name</h1>
+      <h2 id="subregion-name">Subregion Name</h2>
+    </div>
   </header>
 
-  <div id="timestamp">
-    <span id="time-title"><%= t('time') %></span>
-    <span id="time-value">
-      <% time = Time.at(@facade.timestamp) %>
-      <%= time.strftime('%H:%M') %>
-    </span>
-  </div>
+  <body>
 
-  <section id="surf-information">
-    <div class="information-card" id="conditions-container">
-      <h3 class="card-title"><%= t('conditions') %></h3>
-      Temperature: <%= @facade.conditions[:temperature] %> <%= @facade.conditions[:unit] %>
-      Pressure: <%= @facade.conditions[:pressure] %>
+    <div id="timestamp">
+      <span id="time-title"><%= t('time') %></span>
+      <span id="time-value">
+        <% time = Time.at(@facade.timestamp) %>
+        <%= time.strftime('%H:%M') %>
+      </span>
     </div>
-    <div class="information-card" id="waves-container">
-      <h3 class="card-title"><%= t('waves') %></h3>
 
-    </div>
-    <div class="information-card" id="wind-container">
-      <h3 class="card-title"><%= t('wind') %></h3>
-      Wind Speed: <%= @facade.wind[:speed] %>
+    <section id="surf-information">
+      <div class="information-card border border-dark rounded" id="conditions-container">
+        <h3 class="card-title"><%= t('conditions') %></h3>
+        Temperature: <%= @facade.conditions[:temperature] %> <%= @facade.conditions[:unit] %>
+        <br>
+        Pressure: <%= @facade.conditions[:pressure] %>
+      </div>
+      <div class="information-card border border-dark rounded" id="waves-container">
+        <h3 class="card-title"><%= t('waves') %></h3>
+        <% units = @facade.swell[:unit] %>
+        Min Breaking Height: <%= @facade.swell[:minBreakingHeight] %> <%= units %>
+        <br>
+        Max Breaking Height: <%= @facade.swell[:maxBreakingHeight] %> <%= units %>
+      </div>
+      <div class="information-card border border-dark rounded" id="wind-container">
+        <h3 class="card-title"><%= t('wind') %></h3>
+        <% units = @facade.wind[:unit] %>
+        Wind Speed: <%= @facade.wind[:speed] %> <%= units %>
+        <br>
+        Direction: <%= @facade.wind[:direction] %>
+        <br>
+        Wind Chill: <%= @facade.wind[:chill] %>
 
-    </div>
-  </section>
-</body>
+      </div>
+    </section>
+  </body>
 
 
 
