--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,39 +1,7 @@
 <header>
-  <nav class="navbar navbar-expand-lg">
-    <h1>Riptide</h1>
+  <%= render partial: 'navbar' %>
+</header>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-      <div class="dropdown show">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <%= t('locations') %>
-        </a>
-
-        <div class="dropdown-menu">
-          <form class="px-4 py-3">
-
-            <div class="form-group">
-              <label for="search-input"><%= t("search") %> <%= t("locations") %></label>
-              <input type="text" class="form-control" id="search-input" placeholder="<%= t('location-name') %>">
-            </div>
-          </form>
-
-          <div class="dropdown-divider"></div>
-          <div id="location-list">
-            <% @facade.locations.each do |location| %>
-            <% name = location.name %>
-            <% region = location.region %>
-            <% id = location.id %>
-              <a class="dropdown-item" href="#" onclick="updateInfo(<%= id %>)"><%= region %> - <%= name %></a>
-            <% end %>
-        </div>
-
-    </div>
-    <div id="location-container">
-      <h1 id="location-name"><%# @facade.locations.first.name %></h1>
-      <h2 id="subregion-name"><%# @facade.locations.first.region %></h2>
-    </div>
-  </header>
 
   <body>
 
