--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,16 +2,16 @@
   <%= render partial: 'navbar' %>
 </header>
 
+<body>
 
-  <body>
+  <div id="timestamp">
+    <span id="time-title"><%= t('updated_at') %>: </span>
+    <span id="time-value">
+      <% time = Time.at(@facade.timestamp) %>
+      <%= time.strftime('%H:%M') %> GMT
+    </span>
+  </div>
 
-    <div id="timestamp">
-      <span id="time-title"><%= t('updated_at') %></span>
-      <span id="time-value">
-        <%# time = Time.at(@facade.timestamp) %>
-        <%# time.strftime('%H:%M') %>
-      </span>
-    </div>
   <section id="infopane">
     <%= render partial: 'infopane' %>
   </section>
